# ReviOS-Verifier

./: .gitignore  Cargo.toml  LICENSE  README.md  ascii.txt  build.rs  hashes.json
.github/: auto_assign.yml
.github/workflows/: auto_assign.yml  main.yml  rust.yml
src/: hasher.rs  logger.rs  main.rs  revi_version.rs  update_checker.rs
src/models/: github.rs  mod.rs  revi_version.rs
src/utils/: hasher.rs  mod.rs  update_checker.rs
