[package]
name = "revi_verifier"
version = "1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = "0.11.13"
sha2 = "0.10.6"

[profile.release]
lto = true
strip = true