[package]
name = "revi_verifier"
version = "1.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = "0.11.13"
sha2 = { version = "0.10.6", features = ["compress"] }
version-compare = "0.1.1"

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winnt"] }

[profile.release]
lto = true
strip = true

[package.metadata.winres]
OriginalFilename = "revios_verifier.exe"
FileDescription = "Verifier for ReviOS isos"
LegalCopyright = "CC BY-NC-ND"
