[package]
name = "revi_verifier"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
md-5 = "0.10.6"
reqwest = "0.12.8"
sha2 = { version = "0.10.8", features = ["compress"] }
version-compare = "0.2.0"
rfd = "0.15.0"

[profile.release]
lto = true
strip = true
